* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
- Add RockyLinux 8 support

* Thu Jul 29 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.0
- Fixed
  - Removed simp-dconf, simp-gnome, and simp-mate as dependencies since
    they are not actually used by the module
- Added REFERENCE.md

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.1
- Removed EL6 support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.0
- update the upper bound of simplib for SIMP 6.5 release

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.3.0
- Remove Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Thu Nov 01 2018 Liz Nemsick<lnemsick.simp@gmail.com> - 0.2.0
- Update to Hiera 5

* Thu May 17 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- Initial release of the x2go module